--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,23 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+<build>
+
+  <plugins>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+  <version>2.20.1</version>
+    <configuration>
+        <includes>
+            <include>SampleTMVTest.java</include>
+        </includes>
+    </configuration>
+</plugin>
+</plugins>
+</build>
   <dependencies>
+  
   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
@@ -34,5 +50,7 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
   </dependencies>
+
 </project>
